# blog

./: .env  entrypoint.sh  example.env  pyproject.toml  readme.md
auth_app/: forms.py  serializers.py  urls.py  views.py
auth_app/management/commands/: create_groups_and_users.py
blog/: settings.py  urls.py
frontend/: urls.py
frontend/static/frontend/assets/js/: app.js  create_post.js  login.js  logout.js  post-detail.js  posts.js  register.js
frontend/templates/frontend/: base.html  login.html  post_create.html  post_detail.html  posts.html  register.html
post/: admin.py  models.py  serializers.py  urls.py  views.py
post/management/commands/: create_posts.py
post/migrations/: 0001_initial.py
