[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["ramazan_aisaev <aisaev-68@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.7"
psycopg2 = "^2.9.9"
django = "4.2.6"
django-cors-headers = "^4.3.1"
mimesis = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
